--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "script.js",
   "scripts": {
     "start": "node server.js",
+    "build": "npm i",
     "dev": "nodemon server.js"
   },
   "keywords": [],
